[project]
name = "pyminio"
version = "0.1.0"
description = "MinIO Python SDK wrapper with additional features"
authors = [
    {name = "BobIllumine",email = "heredisstultus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
umini = { git = "https://github.com/BobIllumine/python-mini-utils.git" }
minio = "^7.2.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

